--- a/css/style.css
+++ b/css/style.css
@@ -82,13 +82,18 @@ img {
 }
 .tip-content {
     width: 7rem;
-    height: 23.37rem;
-    padding: 0.3rem 0.4rem 0.3rem 0.3rem;
-    background: url("../images/pic_07.png") no-repeat left top;
-    background-size: auto 100%;
+    padding-bottom: 0.1rem;
     font-size: 0.2rem;
     color: #666666;
-    box-sizing: border-box;
     letter-spacing: 1px;
     line-height: 1.4em;
+    background-color: #93bbe4;
+    border-radius: 8px;
+}
+.tip-content-box {
+    width: 6.9rem;
+    padding: 0.3rem;
+    background-color: #fff;
+    border-radius: 8px;
+    box-sizing: border-box;
 }
